ci: try doc deployment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,7 @@ dependencies = [
   "pdoc",
 ]
 [tool.hatch.envs.docs.scripts]
-build = "pdoc --output-directory ./api-docs src/human_regex"
+build = "pdoc --output-directory ./docs human_regex human_regex.bases.general_regex"
 serve = "pdoc human_regex human_regex.bases.general_regex"
 
 [tool.black]
