--- a/pyproject.toml
+++ b/pyproject.toml
@@ -194,7 +194,7 @@ title_format = "## {version} ({project_date})"
 issue_format = "[#{issue}](https://github.com/fleetingbytes/human-regex/issues/{issue})"
 orphan_prefix = "+"
 
-[tool.towncrier.fragment.doc]
+[tool.towncrier.fragment.docs]
 name = "Documentation"
 
 [tool.towncrier.fragment.feature]
